--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,11 @@ markdown_extensions:
   # - attr_list
   - pymdownx.arithmatex:
       generic: true
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.details
   # - pymdownx.magiclink
   - pymdownx.tasklist:
