--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,15 +2,34 @@ site_name: Bhbbbbb's Notes
 
 repo_name: bhbbbbb/obsidian-publish
 repo_url: https://github.com/bhbbbbb/obsidian-publish
-theme:
-    name: 'material'
-    palette:
+edit_uri: edit/main/docs/
 
+extra:
+  social:
+    - icon: fontawesome/solid/paper-plane
+      link: mailto:smark9005310@gmail.com
+
+reveal:
+  path: reveal.js/dist
+  transition: slide
+  theme:
+    name: black.css
+    path: theme
+  plugin:
+    path: reveal.js/plugin
+
+theme:
+  name: 'material'
+
+  custom_dir: theme
+  favicon: assets/images/favicon.png
+
+  palette:
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: pink
-      accent: indigo
+      primary: cyan
+      accent: deep orange
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
@@ -18,8 +37,8 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
-      accent: blue
+      primary: cyan
+      accent: deep orange
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
