--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      # - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2.3.1
+        with:
+          submodules: recursive
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
