--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,10 @@ theme:
 markdown_extensions:
   - footnotes
   - admonition
-  # - attr_list
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.superfences:
@@ -81,3 +84,4 @@ extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/mermaid/dist/mermaid.min.js 
+  # - javascripts/mermaid.js
